--- a/src/styles.css
+++ b/src/styles.css
@@ -70,6 +70,11 @@
     background-color: var(--corp-color-one);
 }
 
+.bg-blur {
+    -webkit-backdrop-filter: blur(24px);
+    backdrop-filter: blur(24px);
+}
+
 .btn-check:focus+.btn, .btn:focus {
     outline: 0;
     box-shadow: 0 0 0 0.25rem var(--corp-color-one-hover) !important;
