--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,9 +32,9 @@
       <div class="row">
         <div class="col-auto">
                   <div class="btn btn-color text-light shadow-sm fw-bolder">
-            <a class="bi bi-facebook link-white-to-color me-2" href="https://www.google.com"></a>
+            <a class="bi bi-facebook link-white-to-color me-2" href="https://www.facebook.com/profile.php?id=100077290395219"></a>
+            <a class="bi bi-twitter link-white-to-color me-2" href="https://twitter.com/Insinia4"></a>
             <i class="bi bi-google link-white-to-color me-2"></i>
-            <i class="bi bi-twitter link-white-to-color me-2"></i>
             <i class="bi bi-youtube link-white-to-color me-2"></i>
             <i class="bi bi-pinterest link-white-to-color me-2"></i>
           </div>
