Revert "AboutUs Page"
This reverts commit 475dea4a87b60950df0abd5580bc77577fb1d47b.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -211,9 +211,9 @@
         </li>
         <li class="list-group-item p-0 m-0">
           <div class="d-flex">
-            <a class="bi bi-facebook link-white-to-color me-2" href="https://www.facebook.com/profile.php?id=100077290395219"></a>
-            <a class="bi bi-twitter link-white-to-color me-2" href="https://twitter.com/Insinia4"></a>
+            <i class="bi bi-facebook link-white-to-color me-2"></i>
             <i class="bi bi-google link-white-to-color me-2"></i>
+            <i class="bi bi-twitter link-white-to-color me-2"></i>
             <i class="bi bi-youtube link-white-to-color me-2"></i>
             <i class="bi bi-pinterest link-white-to-color me-2"></i>
           </div>
