Revert "REGISTER VALIDATION"
This reverts commit 1fa21b0e4e8af4fdfc0a85dce044f0a5d91d6b95.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,127 +1,12 @@
-<div class="container-fluid">
-  <!-- HEADER -->
-  <div class="row pt-5 justify-content-center gap-1">
-    <!-- TEXT -->
-    <div class="col-6 rounded">
-      <div class="col-auto p-0">
-        <h4 class="text-color fw-bolder pt-2">Bienvenido a Insinia</h4>
-        <div class="row">
-          <p class="text-color">
-            <i class="bi bi-house-door-fill me-1"></i>Insinia
-            <i class="bi bi-caret-right-fill mx-1"></i>Sobre nosotros
-          </p>
-        </div>
-        <h5 class="text-color">
-          La herramienta definitiva para crear, organizar y manejar rankings.
-        </h5>
-        <div class="row">
-          <div class="col-auto">
-            <button
-              class="btn btn-color text-light shadow-sm fw-bolder"
-              routerLink="/register"
-            >
-              ¿Comenzamos?
-            </button>
-          </div>
-        </div>
-      </div>
-      <br>
-      <h5 class="text-color">
-        Creemos en un mundo sostenible, por eso llevamos a cabo iniciativas que nos llevan a un futuro mejor
-      </h5>
-      <div class="row">
-        <div class="col-auto">
-                  <div class="btn btn-color text-light shadow-sm fw-bolder">
-            <a class="bi bi-facebook link-white-to-color me-2" href="https://www.google.com"></a>
-            <i class="bi bi-google link-white-to-color me-2"></i>
-            <i class="bi bi-twitter link-white-to-color me-2"></i>
-            <i class="bi bi-youtube link-white-to-color me-2"></i>
-            <i class="bi bi-pinterest link-white-to-color me-2"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- LOGO -->
-    <div class="col-2">
-      <div class="col-lg text-center">
-        <img
-          src="../../assets/insinia-shadow.png"
-          class="img-fluid home-logo float"
-        />
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<footer class="container-fluid bg-color fixed border-top fixed-bottom">
-  <div class="row bg-color-home justify-content-center">
-    <div class="col-2 text-light">
-      <ul>
-        <li class="list-group-item mt-3 p-0">
-          <p class="fw-bolder mb-1">Insinia ™</p>
-        </li>
-        <li class="list-group-item p-0 m-0">
-          <div class="d-flex">
-            <i class="bi bi-facebook link-white-to-color me-2"></i>
-            <i class="bi bi-google link-white-to-color me-2"></i>
-            <i class="bi bi-twitter link-white-to-color me-2"></i>
-            <i class="bi bi-youtube link-white-to-color me-2"></i>
-            <i class="bi bi-pinterest link-white-to-color me-2"></i>
-          </div>
-        </li>
-      </ul>
-    </div>
-
-    <div class="col-2 text-center">
-      <li class="list-group-item mt-3 p-0">
-        <p class="fw-bolder mb-1">ACCESO</p>
-      </li>
-      <li class="list-group-item p-0 m-0">
-        <p class="link-white-to-color m-0 mb-1" routerLink="/register">
-          Register
-        </p>
-      </li>
-      <li class="list-group-item p-0 m-0">
-        <p class="link-white-to-color m-0" routerLink="/login">Login</p>
-      </li>
-    </div>
-
-    <div class="col-2 text-center">
-      <li class="list-group-item mt-3 p-0">
-        <p class="fw-bolder mb-1">SERVICIOS</p>
-      </li>
-      <li class="list-group-item p-0 m-0">
-        <p class="link-white-to-color m-0 mb-1" routerLink="/about">
-          Sobre nosotros
-        </p>
-      </li>
-      <li class="list-group-item p-0 m-0">
-        <p class="link-white-to-color m-0" routerLink="/login">Que ofrecemos</p>
-      </li>
-    </div>
-
-    <div class="col-2 text-center">
-      <li class="list-group-item mt-3 p-0">
-        <p class="fw-bolder mb-1">CONTACTANOS</p>
-      </li>
-      <li class="list-group-item p-0 m-0">
-        <p class="link-white-to-color m-0 mb-1" routerLink="/register">
-          Escríbenos
-        </p>
-      </li>
-      <li class="list-group-item p-0 m-0">
-        <p class="link-white-to-color m-0" routerLink="/login">Asistencia</p>
-      </li>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col text-center">
-      <li class="list-group-item p-0 mt-3">
-        <p class="opacity-50">© 2022 Todos los derechos reservados.</p>
-      </li>
-    </div>
-  </div>
-</footer>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="bg-color-home-0"></div>
+  </body>
+</html>
