Dando estilo a Home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
   
   <!-- NAVBAR SUPERIOR -->
   <div class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur">
-    <div class="p-2">Logo</div>
+    <div class="p-2">
+      <img src="../../assets/insinia.png" width="30">
+    </div>
     <div class="p-2">
       <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder">Home</a>
       <a href="/documentation" class="mx-2 link-color text-decoration-none">Test</a>
@@ -12,15 +14,19 @@
   </div>
 
 <!-- SECTION CONTAINER -->
-<div class="container-fluid">
+<div class="container-fluid fullscreen-section position-relative bg-color-home-inverted">
 
   <!-- SECTION -->
-  <div class="row mt-5">
+  <div class="row position-absolute top-25 start-50 translate-middle">
     <div class="row justify-content-center m-auto">
-      <h1 class="text-center fw-bolder">Bienvenido a <span class="text-color">Insinia</span></h1>
+      <div class="col-auto">
+        <h1 class="text-center fw-bolder">Bienvenido a <span class="text-color">Insinia</span></h1>
+      </div>
     </div>
     <div class="row justify-content-center m-auto mt-1">
-      <h4 class="text-center fw-bolder">La herramienta definitiva para crear Rankings</h4>
+      <div class="col-auto">
+        <h4 class="text-center fw-bolder">La herramienta definitiva para crear Rankings</h4>
+      </div>
     </div>
     <div class="row justify-content-center m-auto mt-3">
       <div class="col-auto">
@@ -29,13 +35,66 @@
     </div>
   </div>
 
+  <div class="row col-10 position-absolute top-60 start-50 translate-middle bg-color rounded py-2">
+
+    <div class="col-6">
+      <div class="card bg-color border-0 shadow-sm">
+        <div class="card-body pb-0 border-bottom border-color text-color table-responsive">
+          <table class="table table-borderless table-hover">
+            <thead class="text-light">
+              <tr class="border-bottom border-color">
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Puntos</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>340</td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>290</td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td>Larry</td>
+                <td>Jackson</td>
+                <td>255</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-6 my-2">
+      <div class="row text-center text-light">
+        <h5>¡Empieza a crear Rankings ya!</h5>
+      </div>
+      <div class="row bg-light">
+        
+      </div>
+      <div class="row bg-light">
+        
+      </div>
+    </div>
+
+  </div>
+
 </div>
 
 <!-- SECTION CONTAINER -->
-<div class="container-fluid">
+<div class="container-fluid fullscreen-section bg-color">
 
   <!-- SECTION -->
-  <div class="row mt-5">
+  <div class="row pt-5">
     <div class="row justify-content-center m-auto">
       <h1 class="text-center fw-bolder">Bienvenido a <span class="text-color">Insinia</span></h1>
     </div>
