--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,7 +8,16 @@
       /></a>
     </div>
     <!-- <div class="col-1"></div> -->
-
+    <h1
+      style="
+        color: aliceblue;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 1rem;
+      "
+    >
+      REGISTRO
+    </h1>
     <form [formGroup]="registerForm">
       <div class="form form-group" *ngIf="firstFormActive">
         <div class="col-12 rounded-3 bg-registro">
